--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "mock": "node ./mock/mode2/mockServer"
   },
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^3.4.3",
     "echarts": "^4.5.0",
     "element-ui": "^2.4.5",
+    "mockjs": "^1.1.0",
     "qs": "^6.9.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
